[project]
name = "bookstore-app"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Caroline Sixel",email = "caroline.sixels@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "gitpython (>=3.1.55,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-django (>=4.12.0,<5.0.0)",
    "black (>=26.5.1,<27.0.0)"
]
